Clean up rects input to AccessibilityFocusRingController::setFocusRings.

This will remove duplicates and not bother to re-run logic if the
rects in the list have not changed.

While this doesn't fix a bug in which unnecessary chromevox focus is
seen for a short while, it helps to clean up related code.

Bug: 798691
Change-Id: I581789056390d370c67f0b2aebbace34bc714de2
Reviewed-on: https://chromium-review.googlesource.com/938672
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Commit-Queue: Katie Dektar <katie@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539520}